Added batch file info